--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,9 +18,12 @@ jobs:
           java-version: 17
 
       - name: Install Gradle
-        uses: gradle/gradle-build-action@v3
-        with:
-          arguments: assembleDebug
+        uses: gradle/actions/setup-gradle@v3
+
+      - name: Build Debug APK
+        run: |
+          chmod +x gradlew || true
+          ./gradlew assembleDebug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
